--- a/.harnessNGPipeAutoZSyJFm8Uf2filePath.yaml
+++ b/.harnessNGPipeAutoZSyJFm8Uf2filePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoZSyJFm8Uf2
-  tags: {}
   name: NGPipeAutoZSyJFm8Uf2
-  type: PreProduction
+  identifier: NGPipeAutoZSyJFm8Uf2
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
