--- a/.harnessNGPipeAutodntsvFsUbvfilePath.yaml
+++ b/.harnessNGPipeAutodntsvFsUbvfilePath.yaml
@@ -1,7 +1,8 @@
 environment:
+  name: NGPipeAutodntsvFsUbv
+  identifier: NGPipeAutodntsvFsUbv
   orgIdentifier: Pipelines_NonK8s_Org_NG
   projectIdentifier: NGPipeAutoPipelineSvc1hFSCpFqwR
-  identifier: NGPipeAutodntsvFsUbv
-  tags: {}
-  name: NGPipeAutodntsvFsUbv
-  type: PreProduction
+  tags: {
+    }
+  type: Production
