--- a/.harness/NgRemoteTemplates_toDrlQd3u5PQsC.yaml
+++ b/.harness/NgRemoteTemplates_toDrlQd3u5PQsC.yaml
@@ -1,8 +1,8 @@
 template:
-  name: "NgRemoteTemplates_toDrlQd3u5PQsC"
+  name: NgRemoteTemplates_toDrlQd3u5PQsC
   projectIdentifier: DoNotDelete_OpenApi2
   orgIdentifier: Ng_Pipelines_K8s_Organisations
-  identifier: "NgRemoteTemplates_toDrlQd3u5PQsC"
+  identifier: NgRemoteTemplates_toDrlQd3u5PQsC
   versionLabel: v1
   type: Stage
   tags: {}
