--- a/.harnessNGPipeAutowfm9MWddx4filePath.yaml
+++ b/.harnessNGPipeAutowfm9MWddx4filePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutowfm9MWddx4
-  tags: {}
   name: NGPipeAutowfm9MWddx4
-  type: PreProduction
+  identifier: NGPipeAutowfm9MWddx4
+  tags: {
+    }
+  type: Production
