--- a/.harnessNGPipeAutoSgrPpyKCA9filePath.yaml
+++ b/.harnessNGPipeAutoSgrPpyKCA9filePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoSgrPpyKCA9
-  tags: {}
   name: NGPipeAutoSgrPpyKCA9
-  type: PreProduction
+  identifier: NGPipeAutoSgrPpyKCA9
+  tags: {
+    }
+  type: Production
