--- a/.harnessNGPipeAutoSmv8Cx499PfilePath.yaml
+++ b/.harnessNGPipeAutoSmv8Cx499PfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoSmv8Cx499P
-  tags: {}
   name: NGPipeAutoSmv8Cx499P
-  type: PreProduction
+  identifier: NGPipeAutoSmv8Cx499P
+  tags: {
+    }
+  type: Production
