--- a/.harnessNGPipeAutoS20Uz4W5AVfilePath.yaml
+++ b/.harnessNGPipeAutoS20Uz4W5AVfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoS20Uz4W5AV
-  tags: {}
   name: NGPipeAutoS20Uz4W5AV
-  type: PreProduction
+  identifier: NGPipeAutoS20Uz4W5AV
+  tags: {
+    }
+  type: Production
