--- a/.harnessNGPipeAuto2C3JzYiV9sfilePath.yaml
+++ b/.harnessNGPipeAuto2C3JzYiV9sfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAuto2C3JzYiV9s
-  tags: {}
   name: NGPipeAuto2C3JzYiV9s
-  type: PreProduction
+  identifier: NGPipeAuto2C3JzYiV9s
+  tags: {
+    }
+  type: Production
