--- a/.harnessNGPipeAutowQal4RZmfIfilePath.yaml
+++ b/.harnessNGPipeAutowQal4RZmfIfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutowQal4RZmfI
-  tags: {}
   name: NGPipeAutowQal4RZmfI
-  type: PreProduction
+  identifier: NGPipeAutowQal4RZmfI
+  tags: {
+    }
+  type: Production
