--- a/.harnessNGPipeAutotQO8HXZHHJfilePath.yaml
+++ b/.harnessNGPipeAutotQO8HXZHHJfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutotQO8HXZHHJ
-  tags: {}
   name: NGPipeAutotQO8HXZHHJ
-  type: PreProduction
+  identifier: NGPipeAutotQO8HXZHHJ
+  tags: {
+    }
+  type: Production
