--- a/.harnessNGPipeAutog7akn5MO6MfilePath.yaml
+++ b/.harnessNGPipeAutog7akn5MO6MfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutog7akn5MO6M
-  tags: {}
   name: NGPipeAutog7akn5MO6M
-  type: PreProduction
+  identifier: NGPipeAutog7akn5MO6M
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
