--- a/.harnessNGPipeAutodR3l9NFLz4filePath.yaml
+++ b/.harnessNGPipeAutodR3l9NFLz4filePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutodR3l9NFLz4
-  tags: {}
   name: NGPipeAutodR3l9NFLz4
-  type: PreProduction
+  identifier: NGPipeAutodR3l9NFLz4
+  tags: {
+    }
+  type: Production
