--- a/.harnessNGPipeAutoLLrwNN91KlfilePath.yaml
+++ b/.harnessNGPipeAutoLLrwNN91KlfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoLLrwNN91Kl
-  tags: {}
   name: NGPipeAutoLLrwNN91Kl
-  type: PreProduction
+  identifier: NGPipeAutoLLrwNN91Kl
+  tags: {
+    }
+  type: Production
