--- a/.harnessNGPipeAutofK9udRy84IfilePath.yaml
+++ b/.harnessNGPipeAutofK9udRy84IfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutofK9udRy84I
-  tags: {}
   name: NGPipeAutofK9udRy84I
-  type: PreProduction
+  identifier: NGPipeAutofK9udRy84I
+  tags: {
+    }
+  type: Production
