--- a/.harnessNGPipeAutovBEnbvHy5KfilePath.yaml
+++ b/.harnessNGPipeAutovBEnbvHy5KfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutovBEnbvHy5K
-  tags: {}
   name: NGPipeAutovBEnbvHy5K
-  type: PreProduction
+  identifier: NGPipeAutovBEnbvHy5K
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
