Added Harness Git Experience

--- a/.harness/NgRemoteTemplates_PDvyzN28jaxlaX.yaml
+++ b/.harness/NgRemoteTemplates_PDvyzN28jaxlaX.yaml
@@ -1,8 +1,8 @@
 template:
-  name: "NgRemoteTemplates_PDvyzN28jaxlaX"
+  name: NgRemoteTemplates_PDvyzN28jaxlaX
   projectIdentifier: DoNotDelete_OpenApi2
   orgIdentifier: Ng_Pipelines_K8s_Organisations
-  identifier: "NgRemoteTemplates_PDvyzN28jaxlaX"
+  identifier: NgRemoteTemplates_PDvyzN28jaxlaX
   versionLabel: v1
   type: Stage
   tags: {}
