Added Harness Git Experience

--- a/.harness/NgRemoteTemplates_cZ8mzvVcWgzujA.yaml
+++ b/.harness/NgRemoteTemplates_cZ8mzvVcWgzujA.yaml
@@ -1,8 +1,8 @@
 template:
-  name: "NgRemoteTemplates_cZ8mzvVcWgzujA"
+  name: NgRemoteTemplates_cZ8mzvVcWgzujA
   projectIdentifier: DoNotDelete_OpenApi2
   orgIdentifier: Ng_Pipelines_K8s_Organisations
-  identifier: "NgRemoteTemplates_cZ8mzvVcWgzujA"
+  identifier: NgRemoteTemplates_cZ8mzvVcWgzujA
   versionLabel: v1
   type: Stage
   tags: {}
