--- a/.harnessNGPipeAutomLgx7gBLdwfilePath.yaml
+++ b/.harnessNGPipeAutomLgx7gBLdwfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutomLgx7gBLdw
-  tags: {}
   name: NGPipeAutomLgx7gBLdw
-  type: PreProduction
+  identifier: NGPipeAutomLgx7gBLdw
+  tags: {
+    }
+  type: Production
