Added Harness Git Experience

--- a/.harness/NgRemoteTemplates_ZVKUoxSK5E3Zc6.yaml
+++ b/.harness/NgRemoteTemplates_ZVKUoxSK5E3Zc6.yaml
@@ -1,8 +1,8 @@
 template:
-  name: "NgRemoteTemplates_ZVKUoxSK5E3Zc6"
+  name: NgRemoteTemplates_ZVKUoxSK5E3Zc6
   projectIdentifier: DoNotDelete_OpenApi2
   orgIdentifier: Ng_Pipelines_K8s_Organisations
-  identifier: "NgRemoteTemplates_ZVKUoxSK5E3Zc6"
+  identifier: NgRemoteTemplates_ZVKUoxSK5E3Zc6
   versionLabel: v1
   type: Stage
   tags: {}
