--- a/.harnessNGPipeAutoLqHfTvV4HLfilePath.yaml
+++ b/.harnessNGPipeAutoLqHfTvV4HLfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoLqHfTvV4HL
-  tags: {}
   name: NGPipeAutoLqHfTvV4HL
-  type: PreProduction
+  identifier: NGPipeAutoLqHfTvV4HL
+  tags: {
+    }
+  type: Production
