--- a/.harnessNGPipeAutoTc9oMv2BYafilePath.yaml
+++ b/.harnessNGPipeAutoTc9oMv2BYafilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoTc9oMv2BYa
-  tags: {}
   name: NGPipeAutoTc9oMv2BYa
-  type: PreProduction
+  identifier: NGPipeAutoTc9oMv2BYa
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
