--- a/.harnessNGPipeAuto6bYxEoTpaMfilePath.yaml
+++ b/.harnessNGPipeAuto6bYxEoTpaMfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAuto6bYxEoTpaM
-  tags: {}
   name: NGPipeAuto6bYxEoTpaM
-  type: PreProduction
+  identifier: NGPipeAuto6bYxEoTpaM
+  tags: {
+    }
+  type: Production
