--- a/.harnessNGPipeAutosk9LSo1T7WfilePath.yaml
+++ b/.harnessNGPipeAutosk9LSo1T7WfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutosk9LSo1T7W
-  tags: {}
   name: NGPipeAutosk9LSo1T7W
-  type: PreProduction
+  identifier: NGPipeAutosk9LSo1T7W
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
