--- a/.harnessNGPipeAutoIxaTVMaQSBfilePath.yaml
+++ b/.harnessNGPipeAutoIxaTVMaQSBfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoIxaTVMaQSB
-  tags: {}
   name: NGPipeAutoIxaTVMaQSB
-  type: PreProduction
+  identifier: NGPipeAutoIxaTVMaQSB
+  tags: {
+    }
+  type: Production
