--- a/.harnessNGPipeAutoI56EB1jWxjfilePath.yaml
+++ b/.harnessNGPipeAutoI56EB1jWxjfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoI56EB1jWxj
-  tags: {}
   name: NGPipeAutoI56EB1jWxj
-  type: PreProduction
+  identifier: NGPipeAutoI56EB1jWxj
+  tags: {
+    }
+  type: Production
