--- a/.harnessNGPipeAutoDvjrR4cxamfilePath.yaml
+++ b/.harnessNGPipeAutoDvjrR4cxamfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoDvjrR4cxam
-  tags: {}
   name: NGPipeAutoDvjrR4cxam
-  type: PreProduction
+  identifier: NGPipeAutoDvjrR4cxam
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
