Added Harness Git Experience

--- a/.harness/NgRemoteTemplates_dYH8OgKnnViNBj.yaml
+++ b/.harness/NgRemoteTemplates_dYH8OgKnnViNBj.yaml
@@ -1,8 +1,8 @@
 template:
-  name: "NgRemoteTemplates_dYH8OgKnnViNBj"
+  name: NgRemoteTemplates_dYH8OgKnnViNBj
   projectIdentifier: DoNotDelete_OpenApi2
   orgIdentifier: Ng_Pipelines_K8s_Organisations
-  identifier: "NgRemoteTemplates_dYH8OgKnnViNBj"
+  identifier: NgRemoteTemplates_dYH8OgKnnViNBj
   versionLabel: v1
   type: Stage
   tags: {}
