Added Harness Git Experience

--- a/.harness/NgRemoteTemplates_t15gS51PyXMPg5.yaml
+++ b/.harness/NgRemoteTemplates_t15gS51PyXMPg5.yaml
@@ -1,8 +1,8 @@
 template:
-  name: "NgRemoteTemplates_t15gS51PyXMPg5"
+  name: NgRemoteTemplates_t15gS51PyXMPg5
   projectIdentifier: DoNotDelete_OpenApi2
   orgIdentifier: Ng_Pipelines_K8s_Organisations
-  identifier: "NgRemoteTemplates_t15gS51PyXMPg5"
+  identifier: NgRemoteTemplates_t15gS51PyXMPg5
   versionLabel: v1
   type: Stage
   tags: {}
