--- a/.harnessNGPipeAutoS1ItWT6IosfilePath.yaml
+++ b/.harnessNGPipeAutoS1ItWT6IosfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoS1ItWT6Ios
-  tags: {}
   name: NGPipeAutoS1ItWT6Ios
-  type: PreProduction
+  identifier: NGPipeAutoS1ItWT6Ios
+  tags: {
+    }
+  type: Production
