--- a/.harnessNGPipeAutoxLKHljhXiBfilePath.yaml
+++ b/.harnessNGPipeAutoxLKHljhXiBfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoxLKHljhXiB
-  tags: {}
   name: NGPipeAutoxLKHljhXiB
-  type: PreProduction
+  identifier: NGPipeAutoxLKHljhXiB
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
