--- a/.harnessNGPipeAuto8ZfYX6WTgDfilePath.yaml
+++ b/.harnessNGPipeAuto8ZfYX6WTgDfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAuto8ZfYX6WTgD
-  tags: {}
   name: NGPipeAuto8ZfYX6WTgD
-  type: PreProduction
+  identifier: NGPipeAuto8ZfYX6WTgD
+  tags: {
+    }
+  type: Production
