--- a/.harnessNGPipeAutomw2L6iI6YMfilePath.yaml
+++ b/.harnessNGPipeAutomw2L6iI6YMfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutomw2L6iI6YM
-  tags: {}
   name: NGPipeAutomw2L6iI6YM
-  type: PreProduction
+  identifier: NGPipeAutomw2L6iI6YM
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
