--- a/.harnessNGPipeAutoPNx965ONWqfilePath.yaml
+++ b/.harnessNGPipeAutoPNx965ONWqfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoPNx965ONWq
-  tags: {}
   name: NGPipeAutoPNx965ONWq
-  type: PreProduction
+  identifier: NGPipeAutoPNx965ONWq
+  tags: {
+    }
+  type: Production
