--- a/.harnessNGPipeAutoYP0PN1ah6UfilePath.yaml
+++ b/.harnessNGPipeAutoYP0PN1ah6UfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoYP0PN1ah6U
-  tags: {}
   name: NGPipeAutoYP0PN1ah6U
-  type: PreProduction
+  identifier: NGPipeAutoYP0PN1ah6U
+  tags: {
+    }
+  type: Production
