--- a/.harnessNGPipeAutoAz1Of5a7IvfilePath.yaml
+++ b/.harnessNGPipeAutoAz1Of5a7IvfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoAz1Of5a7Iv
-  tags: {}
   name: NGPipeAutoAz1Of5a7Iv
-  type: PreProduction
+  identifier: NGPipeAutoAz1Of5a7Iv
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
