--- a/.harnessNGPipeAutoUyOrfLJrplfilePath.yaml
+++ b/.harnessNGPipeAutoUyOrfLJrplfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoUyOrfLJrpl
-  tags: {}
   name: NGPipeAutoUyOrfLJrpl
-  type: PreProduction
+  identifier: NGPipeAutoUyOrfLJrpl
+  tags: {
+    }
+  type: Production
