--- a/.harnessNGPipeAutoohcY2t9s5pfilePath.yaml
+++ b/.harnessNGPipeAutoohcY2t9s5pfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoohcY2t9s5p
-  tags: {}
   name: NGPipeAutoohcY2t9s5p
-  type: PreProduction
+  identifier: NGPipeAutoohcY2t9s5p
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
