--- a/.harness/NgRemoteTemplates_fyZuiO4ZMObVZk.yaml
+++ b/.harness/NgRemoteTemplates_fyZuiO4ZMObVZk.yaml
@@ -1,8 +1,8 @@
 template:
-  name: "NgRemoteTemplates_fyZuiO4ZMObVZk"
+  name: NgRemoteTemplates_fyZuiO4ZMObVZk
   projectIdentifier: DoNotDelete_OpenApi2
   orgIdentifier: Ng_Pipelines_K8s_Organisations
-  identifier: "NgRemoteTemplates_fyZuiO4ZMObVZk"
+  identifier: NgRemoteTemplates_fyZuiO4ZMObVZk
   versionLabel: v1
   type: Stage
   tags: {}
