--- a/.harnessNGPipeAutoUjmoXYw2rXfilePath.yaml
+++ b/.harnessNGPipeAutoUjmoXYw2rXfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoUjmoXYw2rX
-  tags: {}
   name: NGPipeAutoUjmoXYw2rX
-  type: PreProduction
+  identifier: NGPipeAutoUjmoXYw2rX
+  tags: {
+    }
+  type: Production
