--- a/.harnessNGPipeAutoNnCLIYiksHfilePath.yaml
+++ b/.harnessNGPipeAutoNnCLIYiksHfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoNnCLIYiksH
-  tags: {}
   name: NGPipeAutoNnCLIYiksH
-  type: PreProduction
+  identifier: NGPipeAutoNnCLIYiksH
+  tags: {
+    }
+  type: Production
