--- a/.harnessNGPipeAutoBJ5l47i3p0filePath.yaml
+++ b/.harnessNGPipeAutoBJ5l47i3p0filePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoBJ5l47i3p0
-  tags: {}
   name: NGPipeAutoBJ5l47i3p0
-  type: PreProduction
+  identifier: NGPipeAutoBJ5l47i3p0
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
