--- a/.harnessNGPipeAutoqqw1VF1pKmfilePath.yaml
+++ b/.harnessNGPipeAutoqqw1VF1pKmfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoqqw1VF1pKm
-  tags: {}
   name: NGPipeAutoqqw1VF1pKm
-  type: PreProduction
+  identifier: NGPipeAutoqqw1VF1pKm
+  tags: {
+    }
+  type: Production
