--- a/.harnessNGPipeAutotntHe9VOAEfilePath.yaml
+++ b/.harnessNGPipeAutotntHe9VOAEfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutotntHe9VOAE
-  tags: {}
   name: NGPipeAutotntHe9VOAE
-  type: PreProduction
+  identifier: NGPipeAutotntHe9VOAE
+  tags: {
+    }
+  type: Production
