--- a/.harnessNGPipeAutouoGWPTspdhfilePath.yaml
+++ b/.harnessNGPipeAutouoGWPTspdhfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutouoGWPTspdh
-  tags: {}
   name: NGPipeAutouoGWPTspdh
-  type: PreProduction
+  identifier: NGPipeAutouoGWPTspdh
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
