--- a/.harnessNGPipeAutojKqymUBQvbfilePath.yaml
+++ b/.harnessNGPipeAutojKqymUBQvbfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutojKqymUBQvb
-  tags: {}
   name: NGPipeAutojKqymUBQvb
-  type: PreProduction
+  identifier: NGPipeAutojKqymUBQvb
+  tags: {
+    }
+  type: Production
