--- a/.harnessNGPipeAutoZwtBsSqhC9filePath.yaml
+++ b/.harnessNGPipeAutoZwtBsSqhC9filePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoZwtBsSqhC9
-  tags: {}
   name: NGPipeAutoZwtBsSqhC9
-  type: PreProduction
+  identifier: NGPipeAutoZwtBsSqhC9
+  tags: {
+    }
+  type: Production
