--- a/.harnessNGPipeAutoFOcW9AHWvNfilePath.yaml
+++ b/.harnessNGPipeAutoFOcW9AHWvNfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoFOcW9AHWvN
-  tags: {}
   name: NGPipeAutoFOcW9AHWvN
-  type: PreProduction
+  identifier: NGPipeAutoFOcW9AHWvN
+  tags: {
+    }
+  type: Production
