--- a/.harnessNGPipeAutoRzsCAlRaEPfilePath.yaml
+++ b/.harnessNGPipeAutoRzsCAlRaEPfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoRzsCAlRaEP
-  tags: {}
   name: NGPipeAutoRzsCAlRaEP
-  type: PreProduction
+  identifier: NGPipeAutoRzsCAlRaEP
+  tags: {
+    }
+  type: Production
