--- a/.harnessNGPipeAutog1I5jIEhHqfilePath.yaml
+++ b/.harnessNGPipeAutog1I5jIEhHqfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutog1I5jIEhHq
-  tags: {}
   name: NGPipeAutog1I5jIEhHq
-  type: PreProduction
+  identifier: NGPipeAutog1I5jIEhHq
+  tags: {
+    }
+  type: Production
