--- a/.harnessNGPipeAutoCePDE31t5sfilePath.yaml
+++ b/.harnessNGPipeAutoCePDE31t5sfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoCePDE31t5s
-  tags: {}
   name: NGPipeAutoCePDE31t5s
-  type: PreProduction
+  identifier: NGPipeAutoCePDE31t5s
+  tags: {
+    }
+  type: Production
