--- a/.harnessNGPipeAutohUy8Xg7Pc7filePath.yaml
+++ b/.harnessNGPipeAutohUy8Xg7Pc7filePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutohUy8Xg7Pc7
-  tags: {}
   name: NGPipeAutohUy8Xg7Pc7
-  type: PreProduction
+  identifier: NGPipeAutohUy8Xg7Pc7
+  tags: {
+    }
+  type: Production
