--- a/.harnessNGPipeAutoSXVluHhxhZfilePath.yaml
+++ b/.harnessNGPipeAutoSXVluHhxhZfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoSXVluHhxhZ
-  tags: {}
   name: NGPipeAutoSXVluHhxhZ
-  type: PreProduction
+  identifier: NGPipeAutoSXVluHhxhZ
+  tags: {
+    }
+  type: Production
