--- a/.harnessNGPipeAutoA3zl0uzKdlfilePath.yaml
+++ b/.harnessNGPipeAutoA3zl0uzKdlfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoA3zl0uzKdl
-  tags: {}
   name: NGPipeAutoA3zl0uzKdl
-  type: PreProduction
+  identifier: NGPipeAutoA3zl0uzKdl
+  tags: {
+    }
+  type: Production
