--- a/.harnessNGPipeAutoy3kqRIyxoRfilePath.yaml
+++ b/.harnessNGPipeAutoy3kqRIyxoRfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoy3kqRIyxoR
-  tags: {}
   name: NGPipeAutoy3kqRIyxoR
-  type: PreProduction
+  identifier: NGPipeAutoy3kqRIyxoR
+  tags: {
+    }
+  type: Production
