--- a/.harnessNGPipeAutoAHiAdPhrDMfilePath.yaml
+++ b/.harnessNGPipeAutoAHiAdPhrDMfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoAHiAdPhrDM
-  tags: {}
   name: NGPipeAutoAHiAdPhrDM
-  type: PreProduction
+  identifier: NGPipeAutoAHiAdPhrDM
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
