--- a/.harnessNGPipeAutohkV8VyaIPrfilePath.yaml
+++ b/.harnessNGPipeAutohkV8VyaIPrfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutohkV8VyaIPr
-  tags: {}
   name: NGPipeAutohkV8VyaIPr
-  type: PreProduction
+  identifier: NGPipeAutohkV8VyaIPr
+  tags: {
+    }
+  type: Production
