--- a/.harnessNGPipeAutoNyexLhDxpvfilePath.yaml
+++ b/.harnessNGPipeAutoNyexLhDxpvfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoNyexLhDxpv
-  tags: {}
   name: NGPipeAutoNyexLhDxpv
-  type: PreProduction
+  identifier: NGPipeAutoNyexLhDxpv
+  tags: {
+    }
+  type: Production
