--- a/.harnessNGPipeAutoPTFf3q1JwKfilePath.yaml
+++ b/.harnessNGPipeAutoPTFf3q1JwKfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoPTFf3q1JwK
-  tags: {}
   name: NGPipeAutoPTFf3q1JwK
-  type: PreProduction
+  identifier: NGPipeAutoPTFf3q1JwK
+  tags: {
+    }
+  type: Production
