--- a/.harnessNGPipeAutoF6ZmibzyUKfilePath.yaml
+++ b/.harnessNGPipeAutoF6ZmibzyUKfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoF6ZmibzyUK
-  tags: {}
   name: NGPipeAutoF6ZmibzyUK
-  type: PreProduction
+  identifier: NGPipeAutoF6ZmibzyUK
+  tags: {
+    }
+  type: Production
