--- a/.harness/NGPipeAuto0yv1wZmz2TfilePath.yaml
+++ b/.harness/NGPipeAuto0yv1wZmz2TfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAuto0yv1wZmz2T
-  tags: {}
   name: NGPipeAuto0yv1wZmz2T
-  type: PreProduction
+  identifier: NGPipeAuto0yv1wZmz2T
+  tags: {
+    }
+  type: Production
