--- a/.harness/NGPipeAutohGgOstFdvI/filePath.yaml
+++ b/.harness/NGPipeAutohGgOstFdvI/filePath.yaml
@@ -1,11 +1,11 @@
 infrastructureDefinition:
   name: NGPipeAutohGgOstFdvI
   identifier: NGPipeAutohGgOstFdvI
-  environmentRef: account.NGPipeAuto679TZozdcv
+  environmentRef: NGPipeAuto679TZozdcv
   deploymentType: Kubernetes
   type: KubernetesDirect
   spec:
     connectorRef: account.GithubAppAuthenticationAccountConnectorForAutomationTest
-    namespace: default
+    namespace: <+input>
     releaseName: release-<+INFRA_KEY_SHORT_ID>
   allowSimultaneousDeployments: true
