--- a/.harness/NGPipeAutoskVn63XIFUfilePath.yaml
+++ b/.harness/NGPipeAutoskVn63XIFUfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoskVn63XIFU
-  tags: {}
   name: NGPipeAutoskVn63XIFU
-  type: PreProduction
+  identifier: NGPipeAutoskVn63XIFU
+  tags: {
+    }
+  type: Production
