--- a/.harness/NGPipeAutoKnvjHlVirgfilePath.yaml
+++ b/.harness/NGPipeAutoKnvjHlVirgfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoKnvjHlVirg
-  tags: {}
   name: NGPipeAutoKnvjHlVirg
-  type: PreProduction
+  identifier: NGPipeAutoKnvjHlVirg
+  tags: {
+    }
+  type: Production
