--- a/.harness/NGPipeAutomocpN8feY9/filePath.yaml
+++ b/.harness/NGPipeAutomocpN8feY9/filePath.yaml
@@ -1,11 +1,11 @@
 infrastructureDefinition:
   name: NGPipeAutomocpN8feY9
   identifier: NGPipeAutomocpN8feY9
-  environmentRef: account.NGPipeAutozaBlnohIBV
+  environmentRef: NGPipeAutozaBlnohIBV
   deploymentType: Kubernetes
   type: KubernetesDirect
   spec:
     connectorRef: account.GithubAppAuthenticationAccountConnectorForAutomationTest
-    namespace: default
+    namespace: <+input>
     releaseName: release-<+INFRA_KEY_SHORT_ID>
   allowSimultaneousDeployments: true
