--- a/.harness/NGPipeAutowDNQn8hDTlfilePath.yaml
+++ b/.harness/NGPipeAutowDNQn8hDTlfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutowDNQn8hDTl
-  tags: {}
   name: NGPipeAutowDNQn8hDTl
-  type: PreProduction
+  identifier: NGPipeAutowDNQn8hDTl
+  tags: {
+    }
+  type: Production
