--- a/.harness/NGPipeAuto6ltlMaVqvHfilePath.yaml
+++ b/.harness/NGPipeAuto6ltlMaVqvHfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAuto6ltlMaVqvH
-  tags: {}
   name: NGPipeAuto6ltlMaVqvH
-  type: PreProduction
+  identifier: NGPipeAuto6ltlMaVqvH
+  tags: {
+    }
+  type: Production
