--- a/.harness/NGPipeAutohyF29gfbTn/filePath.yaml
+++ b/.harness/NGPipeAutohyF29gfbTn/filePath.yaml
@@ -1,11 +1,11 @@
 infrastructureDefinition:
   name: NGPipeAutohyF29gfbTn
   identifier: NGPipeAutohyF29gfbTn
-  environmentRef: account.NGPipeAutoPvwRMq4yGK
+  environmentRef: NGPipeAutoPvwRMq4yGK
   deploymentType: Kubernetes
   type: KubernetesDirect
   spec:
     connectorRef: account.GithubAppAuthenticationAccountConnectorForAutomationTest
-    namespace: default
+    namespace: <+input>
     releaseName: release-<+INFRA_KEY_SHORT_ID>
   allowSimultaneousDeployments: true
