--- a/.harness/NGPipeAuto5haEytjyOUfilePath.yaml
+++ b/.harness/NGPipeAuto5haEytjyOUfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAuto5haEytjyOU
-  tags: {}
   name: NGPipeAuto5haEytjyOU
-  type: PreProduction
+  identifier: NGPipeAuto5haEytjyOU
+  tags: {
+    }
+  type: Production
