--- a/.harness/NGPipeAutodLGk6PDojqfilePath.yaml
+++ b/.harness/NGPipeAutodLGk6PDojqfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutodLGk6PDojq
-  tags: {}
   name: NGPipeAutodLGk6PDojq
-  type: PreProduction
+  identifier: NGPipeAutodLGk6PDojq
+  tags: {
+    }
+  type: Production
