--- a/.harness/NGPipeAutoKv1f40XbSzfilePath.yaml
+++ b/.harness/NGPipeAutoKv1f40XbSzfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoKv1f40XbSz
-  tags: {}
   name: NGPipeAutoKv1f40XbSz
-  type: PreProduction
+  identifier: NGPipeAutoKv1f40XbSz
+  tags: {
+    }
+  type: Production
