--- a/.harness/NGPipeAutoAk4YlEYXcufilePath.yaml
+++ b/.harness/NGPipeAutoAk4YlEYXcufilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoAk4YlEYXcu
-  tags: {}
   name: NGPipeAutoAk4YlEYXcu
-  type: PreProduction
+  identifier: NGPipeAutoAk4YlEYXcu
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
