--- a/.harness/NGPipeAutol6Ul96oXxWfilePath.yaml
+++ b/.harness/NGPipeAutol6Ul96oXxWfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutol6Ul96oXxW
-  tags: {}
   name: NGPipeAutol6Ul96oXxW
-  type: PreProduction
+  identifier: NGPipeAutol6Ul96oXxW
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
