--- a/.harness/NGPipeAuto3g77Swo90UfilePath.yaml
+++ b/.harness/NGPipeAuto3g77Swo90UfilePath.yaml
@@ -1,7 +1,8 @@
 environment:
+  name: NGPipeAuto3g77Swo90U
+  identifier: NGPipeAuto3g77Swo90U
   orgIdentifier: Pipelines_NonK8s_Org_NG
   projectIdentifier: NGPipeAutoPipelineSvck4wKLmurWM
-  identifier: NGPipeAuto3g77Swo90U
-  tags: {}
-  name: NGPipeAuto3g77Swo90U
-  type: PreProduction
+  tags: {
+    }
+  type: Production
