--- a/.harness/NGPipeAutoZNsuXZKMRBfilePath.yaml
+++ b/.harness/NGPipeAutoZNsuXZKMRBfilePath.yaml
@@ -1,7 +1,8 @@
 environment:
+  name: NGPipeAutoZNsuXZKMRB
+  identifier: NGPipeAutoZNsuXZKMRB
   orgIdentifier: Pipelines_NonK8s_Org_NG
   projectIdentifier: NGPipeAutoPipelineSvck4wKLmurWM
-  identifier: NGPipeAutoZNsuXZKMRB
-  tags: {}
-  name: NGPipeAutoZNsuXZKMRB
-  type: PreProduction
+  tags: {
+    }
+  type: Production
