--- a/.harness/NGPipeAutokCLzEUUBCMfilePath.yaml
+++ b/.harness/NGPipeAutokCLzEUUBCMfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutokCLzEUUBCM
-  tags: {}
   name: NGPipeAutokCLzEUUBCM
-  type: PreProduction
+  identifier: NGPipeAutokCLzEUUBCM
+  tags: {
+    }
+  type: Production
