--- a/.harness/NGPipeAutoCHLahPgZr6filePath.yaml
+++ b/.harness/NGPipeAutoCHLahPgZr6filePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoCHLahPgZr6
-  tags: {}
   name: NGPipeAutoCHLahPgZr6
-  type: PreProduction
+  identifier: NGPipeAutoCHLahPgZr6
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
