--- a/.harness/NGPipeAutorUkgzWYaPSfilePath.yaml
+++ b/.harness/NGPipeAutorUkgzWYaPSfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutorUkgzWYaPS
-  tags: {}
   name: NGPipeAutorUkgzWYaPS
-  type: PreProduction
+  identifier: NGPipeAutorUkgzWYaPS
+  tags: {
+    }
+  type: Production
