--- a/.harness/NGPipeAutoKa7kTpE7CxfilePath.yaml
+++ b/.harness/NGPipeAutoKa7kTpE7CxfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoKa7kTpE7Cx
-  tags: {}
   name: NGPipeAutoKa7kTpE7Cx
-  type: PreProduction
+  identifier: NGPipeAutoKa7kTpE7Cx
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
