--- a/.harness/NGPipeAuto9miSV85i4wfilePath.yaml
+++ b/.harness/NGPipeAuto9miSV85i4wfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAuto9miSV85i4w
-  tags: {}
   name: NGPipeAuto9miSV85i4w
-  type: PreProduction
+  identifier: NGPipeAuto9miSV85i4w
+  tags: {
+    }
+  type: Production
