--- a/.harness/NGPipeAutoJ6URvh4PlKfilePath.yaml
+++ b/.harness/NGPipeAutoJ6URvh4PlKfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoJ6URvh4PlK
-  tags: {}
   name: NGPipeAutoJ6URvh4PlK
-  type: PreProduction
+  identifier: NGPipeAutoJ6URvh4PlK
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
