--- a/.harness/NGPipeAutoGjMzQJ2zQ5filePath.yaml
+++ b/.harness/NGPipeAutoGjMzQJ2zQ5filePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoGjMzQJ2zQ5
-  tags: {}
   name: NGPipeAutoGjMzQJ2zQ5
-  type: PreProduction
+  identifier: NGPipeAutoGjMzQJ2zQ5
+  tags: {
+    }
+  type: Production
