--- a/.harness/NGPipeAutoj6purjg3zGfilePath.yaml
+++ b/.harness/NGPipeAutoj6purjg3zGfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoj6purjg3zG
-  tags: {}
   name: NGPipeAutoj6purjg3zG
-  type: PreProduction
+  identifier: NGPipeAutoj6purjg3zG
+  tags: {
+    }
+  type: Production
