--- a/.harness/NGPipeAutouyCnLpYqtifilePath.yaml
+++ b/.harness/NGPipeAutouyCnLpYqtifilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutouyCnLpYqti
-  tags: {}
   name: NGPipeAutouyCnLpYqti
-  type: PreProduction
+  identifier: NGPipeAutouyCnLpYqti
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
