--- a/.harness/NGPipeAutoVecm6DFvV3filePath.yaml
+++ b/.harness/NGPipeAutoVecm6DFvV3filePath.yaml
@@ -1,7 +1,8 @@
 environment:
+  name: NGPipeAutoVecm6DFvV3
+  identifier: NGPipeAutoVecm6DFvV3
   orgIdentifier: Pipelines_NonK8s_Org_NG
   projectIdentifier: NGPipeAutoPipelineSvctgMHJM9tsL
-  identifier: NGPipeAutoVecm6DFvV3
-  tags: {}
-  name: NGPipeAutoVecm6DFvV3
-  type: PreProduction
+  tags: {
+    }
+  type: Production
