--- a/.harness/NGPipeAuto5iN1ouOdL9filePath.yaml
+++ b/.harness/NGPipeAuto5iN1ouOdL9filePath.yaml
@@ -1,7 +1,8 @@
 environment:
+  name: NGPipeAuto5iN1ouOdL9
+  identifier: NGPipeAuto5iN1ouOdL9
   orgIdentifier: Pipelines_NonK8s_Org_NG
   projectIdentifier: NGPipeAutoPipelineSvctgMHJM9tsL
-  identifier: NGPipeAuto5iN1ouOdL9
-  tags: {}
-  name: NGPipeAuto5iN1ouOdL9
-  type: PreProduction
+  tags: {
+    }
+  type: Production
