--- a/.harness/NGPipeAutogvz7Fm8Nt4/filePath.yaml
+++ b/.harness/NGPipeAutogvz7Fm8Nt4/filePath.yaml
@@ -1,11 +1,11 @@
 infrastructureDefinition:
   name: NGPipeAutogvz7Fm8Nt4
   identifier: NGPipeAutogvz7Fm8Nt4
-  environmentRef: account.NGPipeAutomNn9O3cNwM
+  environmentRef: NGPipeAutomNn9O3cNwM
   deploymentType: Kubernetes
   type: KubernetesDirect
   spec:
     connectorRef: account.GithubAppAuthenticationAccountConnectorForAutomationTest
-    namespace: default
+    namespace: <+input>
     releaseName: release-<+INFRA_KEY_SHORT_ID>
   allowSimultaneousDeployments: true
