--- a/.harness/testRemoteTemplate/pl_auto_pipeline_h60YY.yaml
+++ b/.harness/testRemoteTemplate/pl_auto_pipeline_h60YY.yaml
@@ -8,7 +8,7 @@ pipeline:
     - stage:
         name: s1
         identifier: s1
-        description: Desc Added mfUSiw
+        description: Desc Added 5d1v35
         type: Approval
         spec:
           execution:
