--- a/.harness/NGPipeAutoinq8JSq8WCfilePath.yaml
+++ b/.harness/NGPipeAutoinq8JSq8WCfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoinq8JSq8WC
-  tags: {}
   name: NGPipeAutoinq8JSq8WC
-  type: PreProduction
+  identifier: NGPipeAutoinq8JSq8WC
+  tags: {
+    }
+  type: Production
