--- a/.harness/NGPipeAutov2EGrRuPSKfilePath.yaml
+++ b/.harness/NGPipeAutov2EGrRuPSKfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutov2EGrRuPSK
-  tags: {}
   name: NGPipeAutov2EGrRuPSK
-  type: PreProduction
+  identifier: NGPipeAutov2EGrRuPSK
+  tags: {
+    }
+  type: Production
