--- a/.harness/NGPipeAutoU2tVORQGI6filePath.yaml
+++ b/.harness/NGPipeAutoU2tVORQGI6filePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoU2tVORQGI6
-  tags: {}
   name: NGPipeAutoU2tVORQGI6
-  type: PreProduction
+  identifier: NGPipeAutoU2tVORQGI6
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
