--- a/.harness/NGPipeAutovBjAc9iv2gfilePath.yaml
+++ b/.harness/NGPipeAutovBjAc9iv2gfilePath.yaml
@@ -1,7 +1,8 @@
 environment:
+  name: NGPipeAutovBjAc9iv2g
+  identifier: NGPipeAutovBjAc9iv2g
   orgIdentifier: Pipelines_NonK8s_Org_NG
   projectIdentifier: NGPipeAutoPipelineSvcORP2NyuJ3M
-  identifier: NGPipeAutovBjAc9iv2g
-  tags: {}
-  name: NGPipeAutovBjAc9iv2g
-  type: PreProduction
+  tags: {
+    }
+  type: Production
