--- a/.harness/testRemoteTemplate/pl_auto_pipeline_3gZ7K.yaml
+++ b/.harness/testRemoteTemplate/pl_auto_pipeline_3gZ7K.yaml
@@ -8,7 +8,7 @@ pipeline:
     - stage:
         name: s1
         identifier: s1
-        description: Desc Added 3zIg9D
+        description: Desc Added KnLFzN
         type: Approval
         spec:
           execution:
