--- a/.harness/testRemoteTemplate/pl_auto_pipeline_ir4hG.yaml
+++ b/.harness/testRemoteTemplate/pl_auto_pipeline_ir4hG.yaml
@@ -8,7 +8,7 @@ pipeline:
     - stage:
         name: s1
         identifier: s1
-        description: Desc Added ZzhCT5
+        description: Desc Added 2JSQ2n
         type: Approval
         spec:
           execution:
