--- a/.harness/NGPipeAutoSod3XMDndt/filePath.yaml
+++ b/.harness/NGPipeAutoSod3XMDndt/filePath.yaml
@@ -1,11 +1,11 @@
 infrastructureDefinition:
   name: NGPipeAutoSod3XMDndt
   identifier: NGPipeAutoSod3XMDndt
-  environmentRef: account.NGPipeAutouFFAq8rT7L
+  environmentRef: NGPipeAutouFFAq8rT7L
   deploymentType: Kubernetes
   type: KubernetesDirect
   spec:
     connectorRef: account.GithubAppAuthenticationAccountConnectorForAutomationTest
-    namespace: default
+    namespace: <+input>
     releaseName: release-<+INFRA_KEY_SHORT_ID>
   allowSimultaneousDeployments: true
