--- a/.harness/NGPipeAuto8Ps4l4qn2TfilePath.yaml
+++ b/.harness/NGPipeAuto8Ps4l4qn2TfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAuto8Ps4l4qn2T
-  tags: {}
   name: NGPipeAuto8Ps4l4qn2T
-  type: PreProduction
+  identifier: NGPipeAuto8Ps4l4qn2T
+  tags: {
+    }
+  type: Production
