--- a/.harness/NGPipeAutoNFpsxswD2VfilePath.yaml
+++ b/.harness/NGPipeAutoNFpsxswD2VfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoNFpsxswD2V
-  tags: {}
   name: NGPipeAutoNFpsxswD2V
-  type: PreProduction
+  identifier: NGPipeAutoNFpsxswD2V
+  tags: {
+    }
+  type: Production
