--- a/.harness/NGPipeAuto3Nl7IHMJUofilePath.yaml
+++ b/.harness/NGPipeAuto3Nl7IHMJUofilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAuto3Nl7IHMJUo
-  tags: {}
   name: NGPipeAuto3Nl7IHMJUo
-  type: PreProduction
+  identifier: NGPipeAuto3Nl7IHMJUo
+  tags: {
+    }
+  type: Production
