--- a/.harness/NGPipeAutoQ9AbRDM3WzfilePath.yaml
+++ b/.harness/NGPipeAutoQ9AbRDM3WzfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoQ9AbRDM3Wz
-  tags: {}
   name: NGPipeAutoQ9AbRDM3Wz
-  type: PreProduction
+  identifier: NGPipeAutoQ9AbRDM3Wz
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
