--- a/.harness/NGPipeAutoq7cdAsjCAIfilePath.yaml
+++ b/.harness/NGPipeAutoq7cdAsjCAIfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoq7cdAsjCAI
-  tags: {}
   name: NGPipeAutoq7cdAsjCAI
-  type: PreProduction
+  identifier: NGPipeAutoq7cdAsjCAI
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
