--- a/.harness/NGPipeAutooU77S91j20filePath.yaml
+++ b/.harness/NGPipeAutooU77S91j20filePath.yaml
@@ -1,7 +1,8 @@
 environment:
+  name: NGPipeAutooU77S91j20
+  identifier: NGPipeAutooU77S91j20
   orgIdentifier: Pipelines_NonK8s_Org_NG
   projectIdentifier: NGPipeAutoPipelineSvcbGepNkyCkv
-  identifier: NGPipeAutooU77S91j20
-  tags: {}
-  name: NGPipeAutooU77S91j20
-  type: PreProduction
+  tags: {
+    }
+  type: Production
