--- a/.harness/NGPipeAutorbgQmBBvmbfilePath.yaml
+++ b/.harness/NGPipeAutorbgQmBBvmbfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutorbgQmBBvmb
-  tags: {}
   name: NGPipeAutorbgQmBBvmb
-  type: PreProduction
+  identifier: NGPipeAutorbgQmBBvmb
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
