--- a/.harness/NGPipeAutoBWlheQDMaXfilePath.yaml
+++ b/.harness/NGPipeAutoBWlheQDMaXfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoBWlheQDMaX
-  tags: {}
   name: NGPipeAutoBWlheQDMaX
-  type: PreProduction
+  identifier: NGPipeAutoBWlheQDMaX
+  tags: {
+    }
+  type: Production
