--- a/.harness/testRemoteTemplate/pl_auto_pipeline_SB1Vp.yaml
+++ b/.harness/testRemoteTemplate/pl_auto_pipeline_SB1Vp.yaml
@@ -8,7 +8,7 @@ pipeline:
     - stage:
         name: s1
         identifier: s1
-        description: Desc Added UoxtyP
+        description: Desc Added FWJVw2
         type: Approval
         spec:
           execution:
