--- a/.harness/NGPipeAutoBBUY36mrMCfilePath.yaml
+++ b/.harness/NGPipeAutoBBUY36mrMCfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoBBUY36mrMC
-  tags: {}
   name: NGPipeAutoBBUY36mrMC
-  type: PreProduction
+  identifier: NGPipeAutoBBUY36mrMC
+  tags: {
+    }
+  type: Production
