--- a/.harness/NGPipeAutoe2CmQPk79afilePath.yaml
+++ b/.harness/NGPipeAutoe2CmQPk79afilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoe2CmQPk79a
-  tags: {}
   name: NGPipeAutoe2CmQPk79a
-  type: PreProduction
+  identifier: NGPipeAutoe2CmQPk79a
+  tags: {
+    }
+  type: Production
