--- a/.harness/NGPipeAuto6tLbhvN8CjfilePath.yaml
+++ b/.harness/NGPipeAuto6tLbhvN8CjfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAuto6tLbhvN8Cj
-  tags: {}
   name: NGPipeAuto6tLbhvN8Cj
-  type: PreProduction
+  identifier: NGPipeAuto6tLbhvN8Cj
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
