--- a/.harness/NGPipeAutoWL6VzpdSE9filePath.yaml
+++ b/.harness/NGPipeAutoWL6VzpdSE9filePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoWL6VzpdSE9
-  tags: {}
   name: NGPipeAutoWL6VzpdSE9
-  type: PreProduction
+  identifier: NGPipeAutoWL6VzpdSE9
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
