--- a/.harness/NGPipeAutow6lB6aeNKHfilePath.yaml
+++ b/.harness/NGPipeAutow6lB6aeNKHfilePath.yaml
@@ -1,7 +1,8 @@
 environment:
+  name: NGPipeAutow6lB6aeNKH
+  identifier: NGPipeAutow6lB6aeNKH
   orgIdentifier: Pipelines_NonK8s_Org_NG
   projectIdentifier: NGPipeAutoPipelineSvcEfKWyT1zrJ
-  identifier: NGPipeAutow6lB6aeNKH
-  tags: {}
-  name: NGPipeAutow6lB6aeNKH
-  type: PreProduction
+  tags: {
+    }
+  type: Production
