--- a/.harness/NGPipeAutoOTiZZTogZb/filePath.yaml
+++ b/.harness/NGPipeAutoOTiZZTogZb/filePath.yaml
@@ -1,11 +1,11 @@
 infrastructureDefinition:
   name: NGPipeAutoOTiZZTogZb
   identifier: NGPipeAutoOTiZZTogZb
-  environmentRef: account.NGPipeAutoJ2Hj54JAYO
+  environmentRef: NGPipeAutoJ2Hj54JAYO
   deploymentType: Kubernetes
   type: KubernetesDirect
   spec:
     connectorRef: account.GithubAppAuthenticationAccountConnectorForAutomationTest
-    namespace: default
+    namespace: <+input>
     releaseName: release-<+INFRA_KEY_SHORT_ID>
   allowSimultaneousDeployments: true
