--- a/.harness/NGPipeAutohVf5zaXuDEfilePath.yaml
+++ b/.harness/NGPipeAutohVf5zaXuDEfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutohVf5zaXuDE
-  tags: {}
   name: NGPipeAutohVf5zaXuDE
-  type: PreProduction
+  identifier: NGPipeAutohVf5zaXuDE
+  tags: {
+    }
+  type: Production
