--- a/.harness/NGPipeAutoIFQvK2by8r/filePath.yaml
+++ b/.harness/NGPipeAutoIFQvK2by8r/filePath.yaml
@@ -1,11 +1,11 @@
 infrastructureDefinition:
   name: NGPipeAutoIFQvK2by8r
   identifier: NGPipeAutoIFQvK2by8r
-  environmentRef: account.NGPipeAutoFP88GGAXEG
+  environmentRef: NGPipeAutoFP88GGAXEG
   deploymentType: Kubernetes
   type: KubernetesDirect
   spec:
     connectorRef: account.GithubAppAuthenticationAccountConnectorForAutomationTest
-    namespace: default
+    namespace: <+input>
     releaseName: release-<+INFRA_KEY_SHORT_ID>
   allowSimultaneousDeployments: true
