--- a/.harness/NGPipeAutoZl92F8aw6sfilePath.yaml
+++ b/.harness/NGPipeAutoZl92F8aw6sfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoZl92F8aw6s
-  tags: {}
   name: NGPipeAutoZl92F8aw6s
-  type: PreProduction
+  identifier: NGPipeAutoZl92F8aw6s
+  tags: {
+    }
+  type: Production
