--- a/.harness/NGPipeAutoJXarr0pA84filePath.yaml
+++ b/.harness/NGPipeAutoJXarr0pA84filePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoJXarr0pA84
-  tags: {}
   name: NGPipeAutoJXarr0pA84
-  type: PreProduction
+  identifier: NGPipeAutoJXarr0pA84
+  tags: {
+    }
+  type: Production
