--- a/.harness/NGPipeAuto9VqouTuehLfilePath.yaml
+++ b/.harness/NGPipeAuto9VqouTuehLfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAuto9VqouTuehL
-  tags: {}
   name: NGPipeAuto9VqouTuehL
-  type: PreProduction
+  identifier: NGPipeAuto9VqouTuehL
+  tags: {
+    }
+  type: Production
