--- a/.harness/NGPipeAutoNv99FUiTAx/filePath.yaml
+++ b/.harness/NGPipeAutoNv99FUiTAx/filePath.yaml
@@ -1,11 +1,11 @@
 infrastructureDefinition:
   name: NGPipeAutoNv99FUiTAx
   identifier: NGPipeAutoNv99FUiTAx
-  environmentRef: account.NGPipeAutorWq7KuWFy9
+  environmentRef: NGPipeAutorWq7KuWFy9
   deploymentType: Kubernetes
   type: KubernetesDirect
   spec:
     connectorRef: account.GithubAppAuthenticationAccountConnectorForAutomationTest
-    namespace: default
+    namespace: <+input>
     releaseName: release-<+INFRA_KEY_SHORT_ID>
   allowSimultaneousDeployments: true
