--- a/.harness/NGPipeAutoVvSQyfXEOpfilePath.yaml
+++ b/.harness/NGPipeAutoVvSQyfXEOpfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoVvSQyfXEOp
-  tags: {}
   name: NGPipeAutoVvSQyfXEOp
-  type: PreProduction
+  identifier: NGPipeAutoVvSQyfXEOp
+  tags: {
+    }
+  type: Production
