--- a/.harness/NGPipeAutogkFwtEaCng/filePath.yaml
+++ b/.harness/NGPipeAutogkFwtEaCng/filePath.yaml
@@ -1,11 +1,11 @@
 infrastructureDefinition:
   name: NGPipeAutogkFwtEaCng
   identifier: NGPipeAutogkFwtEaCng
-  environmentRef: account.NGPipeAuto2M4EtBmPx2
+  environmentRef: NGPipeAuto2M4EtBmPx2
   deploymentType: Kubernetes
   type: KubernetesDirect
   spec:
     connectorRef: account.GithubAppAuthenticationAccountConnectorForAutomationTest
-    namespace: default
+    namespace: <+input>
     releaseName: release-<+INFRA_KEY_SHORT_ID>
   allowSimultaneousDeployments: true
