--- a/.harness/NGPipeAutoihTBGD5OISfilePath.yaml
+++ b/.harness/NGPipeAutoihTBGD5OISfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoihTBGD5OIS
-  tags: {}
   name: NGPipeAutoihTBGD5OIS
-  type: PreProduction
+  identifier: NGPipeAutoihTBGD5OIS
+  tags: {
+    }
+  type: Production
