--- a/.harness/NGPipeAutoPmwoPuQqzhfilePath.yaml
+++ b/.harness/NGPipeAutoPmwoPuQqzhfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoPmwoPuQqzh
-  tags: {}
   name: NGPipeAutoPmwoPuQqzh
-  type: PreProduction
+  identifier: NGPipeAutoPmwoPuQqzh
+  tags: {
+    }
+  type: Production
