--- a/.harness/NGPipeAutobHPvpr7rfvfilePath.yaml
+++ b/.harness/NGPipeAutobHPvpr7rfvfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutobHPvpr7rfv
-  tags: {}
   name: NGPipeAutobHPvpr7rfv
-  type: PreProduction
+  identifier: NGPipeAutobHPvpr7rfv
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
