--- a/.harness/NGPipeAutoCwoxQKEAKlfilePath.yaml
+++ b/.harness/NGPipeAutoCwoxQKEAKlfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoCwoxQKEAKl
-  tags: {}
   name: NGPipeAutoCwoxQKEAKl
-  type: PreProduction
+  identifier: NGPipeAutoCwoxQKEAKl
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
