--- a/.harness/NGPipeAutoADVvQBsEUrfilePath.yaml
+++ b/.harness/NGPipeAutoADVvQBsEUrfilePath.yaml
@@ -1,7 +1,8 @@
 environment:
+  name: NGPipeAutoADVvQBsEUr
+  identifier: NGPipeAutoADVvQBsEUr
   orgIdentifier: Pipelines_NonK8s_Org_NG
   projectIdentifier: NGPipeAutoPipelineSvcoDKdsju48v
-  identifier: NGPipeAutoADVvQBsEUr
-  tags: {}
-  name: NGPipeAutoADVvQBsEUr
-  type: PreProduction
+  tags: {
+    }
+  type: Production
