--- a/.harness/NGPipeAutoD3oOTsSQtNfilePath.yaml
+++ b/.harness/NGPipeAutoD3oOTsSQtNfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoD3oOTsSQtN
-  tags: {}
   name: NGPipeAutoD3oOTsSQtN
-  type: PreProduction
+  identifier: NGPipeAutoD3oOTsSQtN
+  tags: {
+    }
+  type: Production
