--- a/.harness/testRemoteTemplate/pl_auto_pipeline_gn6aC.yaml
+++ b/.harness/testRemoteTemplate/pl_auto_pipeline_gn6aC.yaml
@@ -8,7 +8,7 @@ pipeline:
     - stage:
         name: s1
         identifier: s1
-        description: Desc Added
+        description: Desc Added D7gk7k
         type: Approval
         spec:
           execution:
