--- a/.harness/NGPipeAutoYTCEq4zohyfilePath.yaml
+++ b/.harness/NGPipeAutoYTCEq4zohyfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoYTCEq4zohy
-  tags: {}
   name: NGPipeAutoYTCEq4zohy
-  type: PreProduction
+  identifier: NGPipeAutoYTCEq4zohy
+  tags: {
+    }
+  type: Production
