--- a/.harness/NGPipeAutolBACG0pV9cfilePath.yaml
+++ b/.harness/NGPipeAutolBACG0pV9cfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutolBACG0pV9c
-  tags: {}
   name: NGPipeAutolBACG0pV9c
-  type: PreProduction
+  identifier: NGPipeAutolBACG0pV9c
+  tags: {
+    }
+  type: Production
