--- a/.harness/NGPipeAutoCNu1bXMOH5filePath.yaml
+++ b/.harness/NGPipeAutoCNu1bXMOH5filePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoCNu1bXMOH5
-  tags: {}
   name: NGPipeAutoCNu1bXMOH5
-  type: PreProduction
+  identifier: NGPipeAutoCNu1bXMOH5
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
