--- a/.harness/NGPipeAutoSWxyGOQA0pfilePath.yaml
+++ b/.harness/NGPipeAutoSWxyGOQA0pfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoSWxyGOQA0p
-  tags: {}
   name: NGPipeAutoSWxyGOQA0p
-  type: PreProduction
+  identifier: NGPipeAutoSWxyGOQA0p
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
