--- a/.harness/NGPipeAutosrsY3ZnTQLfilePath.yaml
+++ b/.harness/NGPipeAutosrsY3ZnTQLfilePath.yaml
@@ -1,7 +1,8 @@
 environment:
+  name: NGPipeAutosrsY3ZnTQL
+  identifier: NGPipeAutosrsY3ZnTQL
   orgIdentifier: Pipelines_NonK8s_Org_NG
   projectIdentifier: NGPipeAutoPipelineSvc2F05Ao230f
-  identifier: NGPipeAutosrsY3ZnTQL
-  tags: {}
-  name: NGPipeAutosrsY3ZnTQL
-  type: PreProduction
+  tags: {
+    }
+  type: Production
