--- a/.harness/NGPipeAuto7wImM171XZfilePath.yaml
+++ b/.harness/NGPipeAuto7wImM171XZfilePath.yaml
@@ -1,7 +1,8 @@
 environment:
+  name: NGPipeAuto7wImM171XZ
+  identifier: NGPipeAuto7wImM171XZ
   orgIdentifier: Pipelines_NonK8s_Org_NG
   projectIdentifier: NGPipeAutoPipelineSvc2F05Ao230f
-  identifier: NGPipeAuto7wImM171XZ
-  tags: {}
-  name: NGPipeAuto7wImM171XZ
-  type: PreProduction
+  tags: {
+    }
+  type: Production
