--- a/.harness/testRemoteTemplate/pl_auto_pipeline_qkUl9.yaml
+++ b/.harness/testRemoteTemplate/pl_auto_pipeline_qkUl9.yaml
@@ -8,7 +8,7 @@ pipeline:
     - stage:
         name: s1
         identifier: s1
-        description: Desc Added
+        description: Desc Added B9B4oD
         type: Approval
         spec:
           execution:
