--- a/.harness/testRemoteTemplate/pl_auto_pipeline_o79L9.yaml
+++ b/.harness/testRemoteTemplate/pl_auto_pipeline_o79L9.yaml
@@ -8,7 +8,7 @@ pipeline:
     - stage:
         name: s1
         identifier: s1
-        description: Desc Added Q18Nef
+        description: Desc Added yFsLYa
         type: Approval
         spec:
           execution:
