--- a/.harness/NGPipeAutoINTAeltnf2filePath.yaml
+++ b/.harness/NGPipeAutoINTAeltnf2filePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoINTAeltnf2
-  tags: {}
   name: NGPipeAutoINTAeltnf2
-  type: PreProduction
+  identifier: NGPipeAutoINTAeltnf2
+  tags: {
+    }
+  type: Production
