Added Harness Git Experience

--- a/.harness/NgRemoteTemplates_wwLpy8RdHDCfoX.yaml
+++ b/.harness/NgRemoteTemplates_wwLpy8RdHDCfoX.yaml
@@ -1,8 +1,8 @@
 template:
-  name: "NgRemoteTemplates_wwLpy8RdHDCfoX"
+  name: NgRemoteTemplates_wwLpy8RdHDCfoX
   projectIdentifier: DoNotDelete_OpenApi2
   orgIdentifier: Ng_Pipelines_K8s_Organisations
-  identifier: "NgRemoteTemplates_wwLpy8RdHDCfoX"
+  identifier: NgRemoteTemplates_wwLpy8RdHDCfoX
   versionLabel: v1
   type: Stage
   tags: {}
