--- a/.harness/NGPipeAutoW8KRCpwvwefilePath.yaml
+++ b/.harness/NGPipeAutoW8KRCpwvwefilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoW8KRCpwvwe
-  tags: {}
   name: NGPipeAutoW8KRCpwvwe
-  type: PreProduction
+  identifier: NGPipeAutoW8KRCpwvwe
+  tags: {
+    }
+  type: Production
