--- a/.harness/NGPipeAutoCZpAJ7cbWJfilePath.yaml
+++ b/.harness/NGPipeAutoCZpAJ7cbWJfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoCZpAJ7cbWJ
-  tags: {}
   name: NGPipeAutoCZpAJ7cbWJ
-  type: PreProduction
+  identifier: NGPipeAutoCZpAJ7cbWJ
+  tags: {
+    }
+  type: Production
