--- a/.harness/NGPipeAutoBKzrQ03PyrfilePath.yaml
+++ b/.harness/NGPipeAutoBKzrQ03PyrfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoBKzrQ03Pyr
-  tags: {}
   name: NGPipeAutoBKzrQ03Pyr
-  type: PreProduction
+  identifier: NGPipeAutoBKzrQ03Pyr
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
