--- a/.harness/testRemoteTemplate/pl_auto_pipeline_2ifsG.yaml
+++ b/.harness/testRemoteTemplate/pl_auto_pipeline_2ifsG.yaml
@@ -8,7 +8,7 @@ pipeline:
     - stage:
         name: s1
         identifier: s1
-        description: Desc Added VVa6sr
+        description: Desc Added AB3Wur
         type: Approval
         spec:
           execution:
