--- a/.harness/NGPipeAutovdnSU6xF4QfilePath.yaml
+++ b/.harness/NGPipeAutovdnSU6xF4QfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutovdnSU6xF4Q
-  tags: {}
   name: NGPipeAutovdnSU6xF4Q
-  type: PreProduction
+  identifier: NGPipeAutovdnSU6xF4Q
+  tags: {
+    }
+  type: Production
