--- a/.harness/NGPipeAuto4tYKPajV9T/filePath.yaml
+++ b/.harness/NGPipeAuto4tYKPajV9T/filePath.yaml
@@ -1,11 +1,11 @@
 infrastructureDefinition:
   name: NGPipeAuto4tYKPajV9T
   identifier: NGPipeAuto4tYKPajV9T
-  environmentRef: account.NGPipeAutowqWxPs2VY4
+  environmentRef: NGPipeAutowqWxPs2VY4
   deploymentType: Kubernetes
   type: KubernetesDirect
   spec:
     connectorRef: account.GithubAppAuthenticationAccountConnectorForAutomationTest
-    namespace: default
+    namespace: <+input>
     releaseName: release-<+INFRA_KEY_SHORT_ID>
   allowSimultaneousDeployments: true
