--- a/.harness/NGPipeAutorXVvKLJre0filePath.yaml
+++ b/.harness/NGPipeAutorXVvKLJre0filePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutorXVvKLJre0
-  tags: {}
   name: NGPipeAutorXVvKLJre0
-  type: PreProduction
+  identifier: NGPipeAutorXVvKLJre0
+  tags: {
+    }
+  type: Production
