--- a/.harness/NGPipeAutoidOcUAs8v6/filePath.yaml
+++ b/.harness/NGPipeAutoidOcUAs8v6/filePath.yaml
@@ -1,11 +1,11 @@
 infrastructureDefinition:
   name: NGPipeAutoidOcUAs8v6
   identifier: NGPipeAutoidOcUAs8v6
-  environmentRef: account.NGPipeAutoSagYmMJX68
+  environmentRef: NGPipeAutoSagYmMJX68
   deploymentType: Kubernetes
   type: KubernetesDirect
   spec:
     connectorRef: account.GithubAppAuthenticationAccountConnectorForAutomationTest
-    namespace: default
+    namespace: <+input>
     releaseName: release-<+INFRA_KEY_SHORT_ID>
   allowSimultaneousDeployments: true
