--- a/.harness/NGPipeAuto0KcNTsirwGfilePath.yaml
+++ b/.harness/NGPipeAuto0KcNTsirwGfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAuto0KcNTsirwG
-  tags: {}
   name: NGPipeAuto0KcNTsirwG
-  type: PreProduction
+  identifier: NGPipeAuto0KcNTsirwG
+  tags: {
+    }
+  type: Production
