--- a/.harness/NGPipeAutoskzqwfyuX0filePath.yaml
+++ b/.harness/NGPipeAutoskzqwfyuX0filePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoskzqwfyuX0
-  tags: {}
   name: NGPipeAutoskzqwfyuX0
-  type: PreProduction
+  identifier: NGPipeAutoskzqwfyuX0
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
