--- a/.harness/NGPipeAutomTafJ9Mj0ZfilePath.yaml
+++ b/.harness/NGPipeAutomTafJ9Mj0ZfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutomTafJ9Mj0Z
-  tags: {}
   name: NGPipeAutomTafJ9Mj0Z
-  type: PreProduction
+  identifier: NGPipeAutomTafJ9Mj0Z
+  tags: {
+    }
+  type: Production
