--- a/.harness/NGPipeAutoQvbMQgkoQlfilePath.yaml
+++ b/.harness/NGPipeAutoQvbMQgkoQlfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoQvbMQgkoQl
-  tags: {}
   name: NGPipeAutoQvbMQgkoQl
-  type: PreProduction
+  identifier: NGPipeAutoQvbMQgkoQl
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
