--- a/.harness/testRemoteTemplate/pl_auto_pipeline_10Kfx.yaml
+++ b/.harness/testRemoteTemplate/pl_auto_pipeline_10Kfx.yaml
@@ -8,7 +8,7 @@ pipeline:
     - stage:
         name: s1
         identifier: s1
-        description: Desc Added
+        description: Desc Added 2O0VNd
         type: Approval
         spec:
           execution:
