--- a/.harness/NGPipeAutolJ0HvFwhm2filePath.yaml
+++ b/.harness/NGPipeAutolJ0HvFwhm2filePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutolJ0HvFwhm2
-  tags: {}
   name: NGPipeAutolJ0HvFwhm2
-  type: PreProduction
+  identifier: NGPipeAutolJ0HvFwhm2
+  tags: {
+    }
+  type: Production
