--- a/.harness/NGPipeAutocgtXF3FQSIfilePath.yaml
+++ b/.harness/NGPipeAutocgtXF3FQSIfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutocgtXF3FQSI
-  tags: {}
   name: NGPipeAutocgtXF3FQSI
-  type: PreProduction
+  identifier: NGPipeAutocgtXF3FQSI
+  tags: {
+    }
+  type: Production
