--- a/.harness/testRemote/pl_auto_pipeline_qNhal.yaml
+++ b/.harness/testRemote/pl_auto_pipeline_qNhal.yaml
@@ -1,6 +1,6 @@
-pipeline:
-  name: pl_auto_pipeline_qNhal
-  identifier: pl_auto_pipeline_qNhal
+unknown:
+  name: pl_auto_unknown_qNhal
+  identifier: pl_auto_unknown_qNhal
   projectIdentifier: SimplifiedGitSync_Do_Not_Delete
   orgIdentifier: Simlified_Git_sync
   tags: { }
