a new commit message

--- a/.harness/testRemote/pl_auto_pipeline_Wc61z.yaml
+++ b/.harness/testRemote/pl_auto_pipeline_Wc61z.yaml
@@ -1,6 +1,6 @@
-pipeline:
-  name: pl_auto_pipeline_Wc61z
-  identifier: pl_auto_pipeline_Wc61z
+unknown:
+  name: pl_auto_unknown_Wc61z
+  identifier: pl_auto_unknown_Wc61z
   projectIdentifier: SimplifiedGitSync_Do_Not_Delete
   orgIdentifier: Simlified_Git_sync
   tags: { }
