--- a/.harness/NGPipeAutokrmvHrysOPfilePath.yaml
+++ b/.harness/NGPipeAutokrmvHrysOPfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutokrmvHrysOP
-  tags: {}
   name: NGPipeAutokrmvHrysOP
-  type: PreProduction
+  identifier: NGPipeAutokrmvHrysOP
+  tags: {
+    }
+  type: Production
