--- a/.harness/NGPipeAutotHj9SMeRQnfilePath.yaml
+++ b/.harness/NGPipeAutotHj9SMeRQnfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutotHj9SMeRQn
-  tags: {}
   name: NGPipeAutotHj9SMeRQn
-  type: PreProduction
+  identifier: NGPipeAutotHj9SMeRQn
+  tags: {
+    }
+  type: Production
