--- a/.harness/NGPipeAutoLuAOlNx5RUfilePath.yaml
+++ b/.harness/NGPipeAutoLuAOlNx5RUfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoLuAOlNx5RU
-  tags: {}
   name: NGPipeAutoLuAOlNx5RU
-  type: PreProduction
+  identifier: NGPipeAutoLuAOlNx5RU
+  tags: {
+    }
+  type: Production
