--- a/.harness/NGPipeAutoHnKGd8NY5CfilePath.yaml
+++ b/.harness/NGPipeAutoHnKGd8NY5CfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoHnKGd8NY5C
-  tags: {}
   name: NGPipeAutoHnKGd8NY5C
-  type: PreProduction
+  identifier: NGPipeAutoHnKGd8NY5C
+  tags: {
+    }
+  type: Production
