--- a/.harness/NGPipeAuto6Koeu7qLKqfilePath.yaml
+++ b/.harness/NGPipeAuto6Koeu7qLKqfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAuto6Koeu7qLKq
-  tags: {}
   name: NGPipeAuto6Koeu7qLKq
-  type: PreProduction
+  identifier: NGPipeAuto6Koeu7qLKq
+  tags: {
+    }
+  type: Production
