a new commit message

--- a/.harness/testRemote/pl_auto_pipeline_BUJft.yaml
+++ b/.harness/testRemote/pl_auto_pipeline_BUJft.yaml
@@ -1,6 +1,6 @@
-pipeline:
-  name: pl_auto_pipeline_BUJft
-  identifier: pl_auto_pipeline_BUJft
+unknown:
+  name: pl_auto_unknown_BUJft
+  identifier: pl_auto_unknown_BUJft
   projectIdentifier: SimplifiedGitSync_Do_Not_Delete
   orgIdentifier: Simlified_Git_sync
   tags: { }
