--- a/.harness/NGPipeAutohwK83dq4IrfilePath.yaml
+++ b/.harness/NGPipeAutohwK83dq4IrfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutohwK83dq4Ir
-  tags: {}
   name: NGPipeAutohwK83dq4Ir
-  type: PreProduction
+  identifier: NGPipeAutohwK83dq4Ir
+  tags: {
+    }
+  type: Production
