--- a/.harness/testRemote/pl_auto_environment_LOe2U.yaml
+++ b/.harness/testRemote/pl_auto_environment_LOe2U.yaml
@@ -3,4 +3,4 @@ environment:
   identifier: pl_auto_environment_LOe2U
   tags: {}
   name: pl_auto_environment_LOe2U
-  type: PreProduction
+  type: Invalid
