--- a/.harness/NGPipeAutoUYaS3gKNH6filePath.yaml
+++ b/.harness/NGPipeAutoUYaS3gKNH6filePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoUYaS3gKNH6
-  tags: {}
   name: NGPipeAutoUYaS3gKNH6
-  type: PreProduction
+  identifier: NGPipeAutoUYaS3gKNH6
+  tags: {
+    }
+  type: Production
