--- a/.harness/NGPipeAutoSXLgUUZXRWfilePath.yaml
+++ b/.harness/NGPipeAutoSXLgUUZXRWfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoSXLgUUZXRW
-  tags: {}
   name: NGPipeAutoSXLgUUZXRW
-  type: PreProduction
+  identifier: NGPipeAutoSXLgUUZXRW
+  tags: {
+    }
+  type: Production
