--- a/.harness/NGPipeAutovyqulmXPzlfilePath.yaml
+++ b/.harness/NGPipeAutovyqulmXPzlfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutovyqulmXPzl
-  tags: {}
   name: NGPipeAutovyqulmXPzl
-  type: PreProduction
+  identifier: NGPipeAutovyqulmXPzl
+  tags: {
+    }
+  type: Production
